--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "expo": "~47.0.8",
+    "expo-location": "~15.0.1",
     "expo-navigation-bar": "~2.0.1",
     "expo-status-bar": "~1.4.2",
     "nativewind": "^2.0.11",
@@ -17,7 +18,11 @@
     "react-native": "0.70.5",
     "react-native-paper": "^5.0.2",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-skeleton-content": "^1.0.28",
+    "react-native-svg": "13.4.0",
+    "react-native-svg-transformer": "^1.0.0",
+    "react-native-vector-icons": "^9.2.0",
+    "throw": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
